# sarcoos_project

./: README.md
code/ESP32/esp32_suit/esp32_suit/src/: main.cpp
code/ESP32/esp32_suit/src/: main.cpp
code/ESP32/esp32s_stm32f405xxx_rover/: conncetions.txt  platformio.ini
code/ESP32/esp32s_stm32f405xxx_rover/src/: main.cpp
code/arms/: CMakeLists.txt
code/arms/inc/: servo.h
code/arms/src/: mqtt_client.cpp  servo.cpp
code/arms_suit/esp32_suit/esp32_suit/: platformio.ini
code/arms_suit/rapberry_pi/: main.cpp
code/arms_suit/rapberry_pi/inc/: mqtt_client.h
code/arms_suit/rapberry_pi/shoulder_test/: .main_mqtt.cpp.swp  main.cpp
code/rasberry pi/: servo.py
code/rasberry pi code/: CMakeLists.txt
code/rasberry pi code/inc/: main.h
code/rasberry pi code/src/: main.cpp
code/rover/: platformio.ini
code/rover/src/: main.cpp
code/rover/stm32f405RGT6/.metadata/: .log4j2.xml  version.ini
code/rover/stm32f405RGT6/stm32f405rgt6/: .mxproject  .project  STM32F405RGTX_FLASH.ld  STM32F405RGTX_RAM.ld  stm32f405rgt6.ioc
code/stm32f405RGT6/.metadata/: version.ini
code/stm32f405RGT6/stm32f405rgt6/: .cproject  .mxproject  stm32f405rgt6 Debug.launch  stm32f405rgt6.ioc
code/stm32f405RGT6/stm32f405rgt6/Debug/: objects.list  sources.mk  stm32f405rgt6.elf  stm32f405rgt6.hex  stm32f405rgt6.list  stm32f405rgt6.map
code/suit/: CMakeLists.txt  sdkconfig  sdkconfig.old
code/suit/main/: CMakeLists.txt  main.cpp
code/suit/main/inc/: mqtt_client_custom.h  potentiometer.h
code/suit/main/src/: mqtt_client_custom.cpp  potentiometer.cpp
(+54 files in other folders)
